# lazydb

./: .env.sample  .gitignore  .markdownlint-cli2.jsonc  .mcp.sample.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  deny.toml  docker-compose.yml  renovate.json
.claude/commands/: commit.md  fix.md  git_emoji.json  gitemoji.json  pr.md
.github/workflows/: codeql.yml  integration.yml  markdown.yml  rust.yml  security-audit.yml
.taskfile/: docker.yml  markdown.yml  rust.yml
docker/init/: 01_create_sample_schema.sql  02_insert_sample_data.sql  03_generate_bulk_data.sql
docs/: CONFIG_SECURITY.md  architecture.md  config_example.yaml
docs/manual/: connection.md  keybindings.md
src/: app.rs  main.rs  message.rs  ui.rs
src/app/: enums.rs  loading.rs  mod.rs  modal_fields.rs  modals.rs  state.rs  visibility.rs
src/app/handlers/: db.rs  mod.rs  modal.rs  navigation.rs  sidebar.rs
src/app/modals/: connection.rs  history.rs  mod.rs  project.rs  query_input.rs  search.rs  state.rs  visibility.rs
src/config/: loader.rs  mod.rs  models.rs  security.rs  tests.rs
src/db/: async_bridge.rs  mod.rs  postgres.rs  provider.rs  worker.rs
src/db/postgres/: helpers.rs  internal.rs  mod.rs  pool.rs  provider.rs  tests.rs  trait_impl.rs
src/event/: mod.rs  modal.rs  normal.rs
src/export/: csv.rs  error.rs  json.rs  mod.rs
src/model/: connection.rs  history.rs  mod.rs  project.rs  query.rs  schema.rs  table.rs
src/ui/: events.rs  help_bar.rs  main_panel.rs  mod.rs  modal.rs  sidebar.rs  status_bar.rs  terminal.rs  theme.rs  utils.rs
(+56 files in other folders)
