[package]
name = "lazydb"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
async-trait = "0.1"
base64 = "0.22"
ring = "0.17"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.13"
