[package]
name = "lazydb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
itertools = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
dirs = "6.0"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
postgres = "0.19"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3.15"
